tests/snapshots/jsx_named_placeholders__throws_on_empty_attribute_value.snap
---
source: tests/jsx_named_placeholders.rs
info:
  jsx_placeholder_attribute: _t
---
import { Trans } from '@lingui/react/macro';
<Trans><a _t="" href="/">click</a></Trans>

↓ ↓ ↓ ↓ ↓ ↓

error: Placeholder name `` is not valid. Names must start and end with a letter/digit/underscore, but may contain `.-` in between.
 --> input.tsx:2:8
  |
2 | <Trans><a _t="" href="/">click</a></Trans>
  |        ^^^^^^^^^^^^^^^^^^
